[package]
name = "actors"
version = "0.1.0"
authors = ["Felix Raimundo <gamaz3ps@gmail.com>"]
documentation = "http://gamazeps.github.io/RobotS/"

[[bin]]
doc = false
name = "main"
# path = "src/main.rs"

[features]
default = []
dev = ["clippy"]

[dependencies]
clippy = {version = "*", optional = true}
